@@ -1,4 +1,4 @@
-.TH SDPARM "8" "July 2019" "sdparm\-1.11" SDPARM
+.TH SDPARM "8" "December 2019" "sdparm\-1.11" SDPARM
 .SH NAME
 sdparm \- access SCSI modes pages; read VPD pages; send simple SCSI commands.
 .SH SYNOPSIS
