@@ -2,7 +2,7 @@ sdparm (1.11-0.1) unstable; urgency=low
 
   * see ChangeLog
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Thu, 04 Jul 2019 22:00:00 -0400
+ -- Douglas Gilbert <dgilbert@interlog.com>  Tue, 12 Nov 2019 09:00:00 +1000
 
 sdparm (1.10-0.1) unstable; urgency=low
 
